<resources>
    <string name="app_name">Flipkart</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--below strings are written for activity of the name mentioned-->
    <string name="brand">Brands</string>
    <string name="category">All Categories</string>
    <string name="product">Electronics</string>
    <string name="main">Flipkart</string>
    <string name="cart">My Cart</string>
    <string name="wishlist">My Wishlist</string>

    <!--string for load until API getProducts connected-->
    <string name="label_loading">Loading...</string>

    <!--below strings are written for xml file strings-->
    <string name="searchbrand">Search Brands by Name</string>
    <string name="searchmain">Search for Products,Brands and More</string>
    <string name="offer">Offers</string>
    <string name="electronic">Electronic</string>
    <string name="fashion">Fashion</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="motoad">Moto S4</string>
    <string name="lenovoad">Lenovo Vibe K5</string>
    <string name="deals_of_day">Deals of the Day</string>
    <string name="time">01h 42m remaining</string>
    <string name="viewall">View All</string>
    <string name="title_activity_login">Sign in</string>
    <string name="buynow">BUY NOW</string>
    <string name="addtocart">ADD TO CART</string>
    <string name="wishlistBtn">Move to wishlist</string>
    <string name="removeCart">Remove</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_firebase">Firebase Login</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_email_mismatch">Please enter correct email</string>
    <string name="error_password_size">Password size must be 6 and above</string>
    <string name="error_password_mismatch">Confirm password doesnot match</string>
    <string name="error_phone_size">Phone number must be 10 digits</string>

    <!--error-->
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>

    <!--profile-->
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>
    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>

    <!--Spinner values-->
    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>more</item>
    </string-array>
</resources>
