<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.flipkart.activity.MainActivity"
    android:id="@+id/main_drawerLayout">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/appbackground">
            <include
                layout="@layout/layout_navigation_action_bar" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:padding="5dp"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:drawableLeft="@drawable/search"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/searchmain"
                    android:textSize="17dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/txtView1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/offer"
                    android:text="@string/offer"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/txtView2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableTop="@drawable/electronics"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/electronic"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txtView3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableTop="@drawable/fashion"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/fashion"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txtView4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableTop="@drawable/home"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/home"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_more"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableTop="@drawable/more"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/more"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:layout_weight="1"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="300dp"
                            android:layout_height="200dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="5dp"
                            android:src="@drawable/ad1" />

                        <ImageView
                            android:id="@+id/pImageView1"
                            android:layout_width="300dp"
                            android:layout_height="200dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="5dp"
                            android:src="@drawable/ad5" />

                        <ImageView
                            android:id="@+id/pImageView2"
                            android:layout_width="300dp"
                            android:layout_height="200dp"
                            android:src="@drawable/ad2"
                            android:paddingLeft="10dp"
                            android:paddingRight="5dp"/>


                    </LinearLayout>

                </HorizontalScrollView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view2"
                    android:layout_width="match_parent"
                    android:layout_height="185dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <RelativeLayout
                            android:id="@+id/relativelayout1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:background="@drawable/image_border">


                            <ImageView
                                android:id="@+id/mAD1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="60dp"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:layout_marginTop="10dp"
                                android:clickable="true"
                                android:padding="15dp"
                                app:srcCompat="@drawable/motoview" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/motoad"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:layout_alignParentBottom="true"
                                android:layout_marginBottom="23dp"
                                android:layout_centerHorizontal="true"
                                android:gravity="center"/>

                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/relativelayout2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:layout_weight="5"
                            android:background="@drawable/image_border">

                            <ImageView
                                android:id="@+id/mAD2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="60dp"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:layout_marginTop="10dp"
                                android:clickable="true"
                                app:srcCompat="@drawable/lenovoview" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lenovoad"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:layout_alignParentBottom="true"
                                android:layout_marginBottom="23dp"
                                android:layout_centerHorizontal="true"
                                android:gravity="center"/>

                        </RelativeLayout>
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deals_of_day"
                        android:textColor="@color/white"
                        android:textSize="25dp"
                        android:paddingLeft="20dp"
                        android:id="@+id/deals"
                        android:padding="10dp"/>

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/deals"
                        android:drawableLeft="@drawable/clock"
                        android:gravity="center"
                        android:paddingBottom="20dp"
                        android:paddingLeft="15dp"
                        android:text="@string/time"
                        android:textColor="@color/lightblue" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/viewall"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="30dp"
                        android:text="@string/viewall"
                        android:textAllCaps="false"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="30dp"
                        android:text="@string/action_sign_in"
                        android:textAllCaps="false"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


    </ScrollView>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/layout_navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/layout_navigation_header">

    </android.support.design.widget.NavigationView>



</android.support.v4.widget.DrawerLayout>
